backed out a 1.5 only method Integer.valueOf
Former-commit-id: 9673a204d8283c73b5c5cef9f5b049cbb437e134